inclusao do grid no projeto

--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@
 /* ==========================================================================
    Base styles: opinionated defaults
    ========================================================================== */
+@import url(libs/grid_960_12.css);
 
 html,
 button,
